# ESP32s3CamLidar

./: .clangd  .cproject  .gitignore  .project  CMakeLists.txt  ESP32s3CamLidar.code-workspace  PMW3901_INTEGRATION.md  README.md  esp_idf_project_configuration.json  protocol_sniffer.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/esp32-camera/driver/include/: esp_camera.h  sensor.h
components/esp32-camera/sensors/: ov7725.c
components/esp32-camera/sensors/private_include/: gc032a_settings.h  mega_ccm_settings.h  nt99141_settings.h  ov2640_settings.h  ov3660_settings.h  ov5640_settings.h
main/: CMakeLists.txt  Kconfig.projbuild  chat.txt  esp_idf_project_configuration.json  example.c  idf_component.yml  main.c  pmw3901.c  sdk.txt
main/drivers/: camera_optical_flow.c  camera_optical_flow.h  dts6012m.c  dts6012m.h  mtf02.c  mtf02.h  pmw3901.c  pmw3901.h  tfmini.c  tfmini.h
main/webserver/: app_httpd.c  app_httpd.h  web_index.html  web_index_html.h  webserver_ctrl.c  webserver_ctrl.h  wifi_station.c  wifi_station.h
tools/: html_to_c.py
visualisation/: go.py
